# Being_insider

./: .gitignore  README.md  pyproject.toml  requirements.txt  智能体制作作业报告.md
.dbg/: trae-debug-log-alternating-fallback.ndjson
backend/app/: build_knowledge_index.py  content.py  deepseek_service.py  json_repair.py  knowledge_base.py  main.py  runtime_settings.py  schemas.py  session_store.py
backend/app/routers/: story.py
backend/tests/: test_deepseek_service.py  test_runtime_settings.py
docs/: development-plan.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  styles.css
scenario_1/: 01-甲午前东亚局势.md  02-朝鲜王室与派系.md  03-日本在朝鲜的扩张.md  04-清廷决策与李鸿章的战略.md  05-真实历史对照.md
scenario_2/: 01-万历初年朝局.md  02-张居正的政治地位.md  03-考成法与财政改革.md  04-内廷外朝关系与阻力.md  05-真实历史对照.md
scenario_3/: 01-金末局势.md  02-李全与红袄军.md  03-宋金蒙三方关系.md  04-地方武装与粮道.md  05-真实历史对照.md
scripts/: build-knowledge-index.ps1  load-local-env.ps1  setup.ps1  start-all.ps1  start-backend.ps1  start-frontend.ps1  stop-all.ps1  stop-backend.ps1  stop-frontend.ps1
