[project]
name = "ai-history-sandbox"
version = "0.1.0"
description = "Ancient China branching-history course project backend"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
  "fastapi>=0.115.0,<1.0.0",
  "httpx>=0.27.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.8.0,<3.0.0",
]

[tool.uv]
package = false
